src/test/ui/extern/extern-types-distinct-types.stderr
error[E0308]: mismatched types
  --> $DIR/extern-types-distinct-types.rs:19:5
   |
LL |     r //~ ERROR mismatched types
   |     ^ expected extern type `B`, found extern type `A`
   |
   = note: expected type `&B`
              found type `&A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
